packages/ducktools-classbuilder/ducktools_classbuilder-0.9.1.tar.gz/ducktools_classbuilder-0.9.1/tests/prefab/shared/examples/fails/inheritance_1.py
from ducktools.classbuilder.prefab import prefab, attribute


@prefab
class B:
    x: int = 0


@prefab
class C(B):
    y: int
